- Fragebogen erstellen Page optimiert - Menübereich ist jetzt fix - Der Fragenbereich ist jetzt Scrollbar - Sobald eine Frage hinzugefügt wurde bringt das Div diese für einen kurzen Moment in den Fokus. (Event-Indikator)

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,8 @@ body
 
 .area
 {
-	background-color:white;
+	overflow: auto;
+	background-color: white;
 }
 
 #login_area_teacher
@@ -148,10 +149,17 @@ body
 	overflow-y:auto
 }
 
+#create_questionnaire_area
+{
+	overflow: scroll;
+	overflow-x: hidden;
+	height: 570px;
+}
+
 #Fragebogen_erstellen_page
 {
-	visibility: hidden;
-	overflow-y:auto
+	/*visibility: hidden;
+	overflow-y:auto*/
 }
 
 #Fragen_verwalten_page
